新增车间班组两级数据权限及前端管理联调
- 新增车间、班组、用户数据范围、知识资源 ACL 四张权限表
- 增加版本化数据库升级脚本，保留原有历史迁移链路
- 实现知识库与文档按车间/班组范围的访问控制
- 新增后台“数据权限”管理页，支持组织、用户范围和资源 ACL 配置
- 抽离前端数据权限 Service，支持跨车间班组懒加载与缓存
- 完成本地 PostgreSQL 建表、前后端代理联调及权限单测验证